// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForecastSummaries renders correctly 1`] = `
<DocumentFragment>
  <div
    class="forecast-summaries"
  >
    <div
      class="forecast-summary"
      data-testid="forecast-summary"
    >
      <div
        class="forecast-summary__date"
      >
        Thu Jan 01 1970
      </div>
      <div
        class="forecast-summary__icon"
        data-testid="forecast-icon"
      >
        <img
          alt=""
        />
      </div>
      <div
        class="forecast-summary__temperature"
      >
        22
      </div>
      <div
        class="forecast-summary__description"
      >
        Stub description 1
      </div>
    </div>
    <div
      class="forecast-summary"
      data-testid="forecast-summary"
    >
      <div
        class="forecast-summary__date"
      >
        Thu Jan 01 1970
      </div>
      <div
        class="forecast-summary__icon"
        data-testid="forecast-icon"
      >
        <img
          alt=""
        />
      </div>
      <div
        class="forecast-summary__temperature"
      >
        24
      </div>
      <div
        class="forecast-summary__description"
      >
        Stub description2
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ForecastSummary renders correctly 1`] = `
<DocumentFragment>
  <div
    class="forecast-summary"
    data-testid="forecast-summary"
  >
    <div
      class="forecast-summary__date"
    >
      Mon Apr 30 2018
    </div>
    <div
      class="forecast-summary__icon"
      data-testid="forecast-icon"
    >
      <img
        alt="icon of Stub description"
      />
    </div>
    <div
      class="forecast-summary_temperature"
    >
      22°C
    </div>
    <div
      class="forecast-summary__description"
    >
      Stub description
    </div>
    <button
      type="button"
    >
      More details
    </button>
  </div>
</DocumentFragment>
`;

exports[`ForecastSummeries renders correctly 1`] = `
<DocumentFragment>
  <div
    class="forecast-summaries"
  >
    <div
      class="forecast-summary"
      data-testid="forecast-summary"
    >
      <div
        class="forecast-summary__date"
      >
        Thu Jan 01 1970
      </div>
      <div
        class="forecast-summary__icon"
        data-testid="forecast-icon"
      >
        <img
          alt=""
        />
      </div>
      <div
        class="forecast-summary__temperature"
      >
        22
      </div>
      <div
        class="forecast-summary__description"
      >
        Stub description 1
      </div>
    </div>
    <div
      class="forecast-summary"
      data-testid="forecast-summary"
    >
      <div
        class="forecast-summary__date"
      >
        Thu Jan 01 1970
      </div>
      <div
        class="forecast-summary__icon"
        data-testid="forecast-icon"
      >
        <img
          alt=""
        />
      </div>
      <div
        class="forecast-summary__temperature"
      >
        24
      </div>
      <div
        class="forecast-summary__description"
      >
        Stub description2
      </div>
    </div>
  </div>
</DocumentFragment>
`;
